--- a/package.json
+++ b/package.json
@@ -12,13 +12,22 @@
     "type": "git",
     "url": "git://github.com/evgenyrodionov/flexboxgrid2.git"
   },
-  "keywords": ["browser", "flexbox", "grid", "css"],
+  "keywords": [
+    "browser",
+    "flexbox",
+    "grid",
+    "css"
+  ],
   "author": "@evgenyrodionov",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/evgenyrodionov/flexboxgrid2/issues"
   },
-  "files": ["flexboxgrid2.css", "flexboxgrid2.min.css", "src"],
+  "files": [
+    "flexboxgrid2.css",
+    "flexboxgrid2.min.css",
+    "src"
+  ],
   "homepage": "https://github.com/evgenyrodionov/flexboxgrid2",
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -27,6 +36,7 @@
     "grunt-contrib-htmlmin": "^0.1.3",
     "grunt-contrib-uglify": "^0.2.7",
     "grunt-contrib-watch": "^0.5.3",
+    "grunt-css-prefix": "^0.2.3",
     "grunt-myth": "^1.0.1",
     "grunt-processhtml": "^0.2.9"
   },
