--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules
 .DS_Store
 yarn.lock
 dist
-flexboxgrid2.css
-flexboxgrid2.min.css
+!flexboxgrid2.css
+!flexboxgrid2.min.css
 !src/flexboxgrid2.css
